<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.Fragment.UserCycle.RegisterFragment">
    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_et_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape"
        android:paddingEnd="@dimen/dimen_MMM"
        android:paddingStart="@dimen/dimen_MMM">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_et_mail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/register_et_name"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape"
        android:paddingEnd="@dimen/dimen_MMM"
        android:paddingStart="@dimen/dimen_MMM">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/register_tv_dateofbirth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/register_et_mail"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:textColor="#000"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/ic_calender_icon"
        android:hint="@string/date_of_birth"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dimen_MM"
        android:paddingStart="@dimen/dimen_MMM"/>


    <RelativeLayout
        android:id="@+id/regiseter_sp_blood_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_tv_dateofbirth"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            android:paddingLeft="@dimen/dimen_MMM"
            android:id="@+id/register_tv_blood_txt"
            android:paddingTop="@dimen/dimen_MMM"
            android:paddingEnd="@dimen/dimen_MMM"
            android:hint="@string/blood_type"/>

        <Spinner
            android:id="@+id/register_sp_blood"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            >

        </Spinner>

    </RelativeLayout>

    <TextView
        android:id="@+id/register_tv_lastdonation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/regiseter_sp_blood_layout"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:textColor="#000"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/ic_calender_icon"
        android:hint="@string/last_donation"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_MMM"
        android:paddingEnd="@dimen/dimen_MM" />


    <RelativeLayout
        android:id="@+id/regiseter_sp_govern_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_tv_lastdonation"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            android:paddingLeft="@dimen/dimen_MMM"
            android:id="@+id/register_tv_governsp_txt"
            android:paddingTop="@dimen/dimen_MMM"
            android:paddingEnd="@dimen/dimen_MMM"
            android:paddingStart="@dimen/dimen_MMM"
            android:hint="@string/governorate"/>

        <Spinner
            android:id="@+id/register_sp_governorate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"



            ></Spinner>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/regiseter_sp_city_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regiseter_sp_govern_layout"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            android:paddingStart="@dimen/dimen_MMM"
            android:id="@+id/register_tv_citysp_txt"
            android:paddingTop="@dimen/dimen_MMM"
            android:paddingEnd="@dimen/dimen_MMM"
            android:hint="@string/city"/>

        <Spinner
            android:id="@+id/register_sp_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            ></Spinner>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/regiseter_sp_city_layout"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape"
        android:paddingStart="@dimen/dimen_MMM"
        android:paddingEnd="@dimen/dimen_MMM">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/register_et_phone_number"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape"
        android:paddingStart="@dimen/dimen_MMM"
        android:paddingEnd="@dimen/dimen_MMM">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_et_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/register_et_password"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape"
        android:paddingStart="@dimen/dimen_MMM"
        android:paddingEnd="@dimen/dimen_MMM">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/confirma_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_et_confirm_pass"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_M"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:id="@+id/register_btn_register"
        android:background="@color/colorPrimaryDark"
        android:text="@string/registeration_btn"
        android:textColor="@color/white" />


</RelativeLayout>