<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.Fragment.NavigationCycle.MyInformation">
    <include layout="@layout/toolbar"
        android:layout_alignParentTop="true"
        android:id="@+id/myinfo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"></include>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:id="@+id/myinfo_et_name"
        android:layout_marginTop="@dimen/dimen_MMM"
        android:layout_below="@id/myinfo_toolbar"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:layout_marginStart="@dimen/dimen_MM"
        android:paddingEnd="@dimen/dimen_MMM"
        android:paddingStart="@dimen/dimen_MMM"
        android:background="@drawable/edit_text_shape"
        >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:id="@+id/myinfo_et_email"
        android:layout_marginTop="@dimen/dimen_MMM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:layout_marginStart="@dimen/dimen_MM"
        android:paddingEnd="@dimen/dimen_MMM"
        android:paddingStart="@dimen/dimen_MMM"
        android:background="@drawable/edit_text_shape"
        android:layout_below="@id/myinfo_et_name">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/myinfo_tv_dateofbirth"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/myinfo_et_email"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:textColor="#000"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/ic_calender_icon"
        android:hint="@string/date_of_birth"
        android:paddingStart="@dimen/dimen_MMM"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dimen_MM" />
    <RelativeLayout
        android:id="@+id/myinfo_sp_bloodtype_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myinfo_tv_dateofbirth"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            android:paddingLeft="@dimen/dimen_MMM"
            android:paddingTop="@dimen/dimen_MMM"
            android:paddingRight="@dimen/dimen_MMM"
            android:id="@+id/myinfo_tv_bloodtypesp_txt"
            android:hint="@string/governorate"/>

        <Spinner
            android:id="@+id/myinfo_SpBloodtype"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            ></Spinner>
    </RelativeLayout>
    <TextView
        android:id="@+id/myinfo_tv_lastdonation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:layout_below="@id/myinfo_sp_bloodtype_layout"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:textColor="#000"
        android:background="@drawable/edit_text_shape"
        android:drawableEnd="@drawable/ic_calender_icon"
        android:hint="@string/last_donation"
        android:paddingStart="@dimen/dimen_MMM"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dimen_MM" />

    <RelativeLayout
        android:id="@+id/myinfo_sp_govern_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myinfo_tv_lastdonation"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            android:paddingStart="@dimen/dimen_MMM"
            android:paddingTop="@dimen/dimen_MMM"
            android:paddingEnd="@dimen/dimen_MMM"
            android:id="@+id/myinfo_tv_govrnsp_txt"
            android:hint="@string/governorate"/>

        <Spinner
            android:id="@+id/myinfo_spgovernorate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            ></Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/myinfo_sp_city_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/myinfo_sp_govern_layout"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_MM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:background="@drawable/edit_text_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            android:paddingStart="@dimen/dimen_MMM"
            android:paddingTop="@dimen/dimen_MMM"
            android:id="@+id/myinfo_tv_citysp_txt"
            android:paddingEnd="@dimen/dimen_MMM"
            android:hint="@string/city"/>

        <Spinner
            android:id="@+id/myinfo_sp_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"



            ></Spinner>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:id="@+id/myinfo_et_phone"
        android:layout_marginTop="@dimen/dimen_MMM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:layout_marginStart="@dimen/dimen_MM"
        android:paddingEnd="@dimen/dimen_MMM"
        android:paddingStart="@dimen/dimen_MMM"
        android:background="@drawable/edit_text_shape"
        android:layout_below="@id/myinfo_sp_city_layout">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:id="@+id/myinfo_et_newpass"
        android:layout_marginTop="@dimen/dimen_MMM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:layout_marginStart="@dimen/dimen_MM"
        android:paddingEnd="@dimen/dimen_MMM"
        android:paddingStart="@dimen/dimen_MMM"
        android:background="@drawable/edit_text_shape"
        android:layout_below="@id/myinfo_et_phone">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_height_layout"
        android:id="@+id/myinfo_et_confirm_pass"
        android:layout_marginTop="@dimen/dimen_MMM"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:layout_marginStart="@dimen/dimen_MM"
        android:paddingEnd="@dimen/dimen_MMM"
        android:paddingStart="@dimen/dimen_MMM"
        android:background="@drawable/edit_text_shape"
        android:layout_below="@id/myinfo_et_newpass">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myinfo_btn_update"
        style="@style/blue_btn_style"
        android:text="@string/update"
        android:layout_below="@id/myinfo_et_confirm_pass"
        android:layout_marginEnd="@dimen/dimen_MM"
        android:layout_marginStart="@dimen/dimen_MM"
        android:layout_marginTop="@dimen/dimen_M"/>

</RelativeLayout>