<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.Fragment.UserCycle.ForgetpasswordFragment">

    <ImageView
        android:id="@+id/forgetpass_fr_iv_logo"
        android:layout_width="@dimen/dimen_logo_width"
        android:layout_height="@dimen/dimen_logo_height"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/forgetpass_fr_tv_forgetpassword"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/dimen_M"
        android:src="@drawable/ic_logo" />


    <TextView
        android:id="@+id/forgetpass_fr_tv_forgetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/forget_password_tv" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgetpass_fr_tv_forgetpassword"
        android:layout_margin="@dimen/dimen_MM"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgetpass_fr_ed_phnumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_height_layout"
            android:layout_marginStart="@dimen/dimen_MM"
            android:layout_marginTop="@dimen/dimen_MM"
            android:layout_marginEnd="@dimen/dimen_MM"
            android:background="@drawable/edit_text_shape"
            android:paddingStart="@dimen/dimen_MMM"
            android:paddingEnd="@dimen/dimen_MM">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/forgetpass_fr_bn_sendpass"
            style="@style/green_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_M"
            android:layout_marginEnd="@dimen/dimen_MM"
            android:layout_marginStart="@dimen/dimen_MM"
            android:text="@string/send" />
    </LinearLayout>


</RelativeLayout>